try overriding jvm args for spring-boot2 test